force-app/main/default/objects/Note_Template__mdt/Note_Template__mdt.object-meta.xml
<CustomObject>
    <label>Note Template</label>
    <pluralLabel>Note Templates</pluralLabel>
</CustomObject>