force-app/main/default/objects/Note_Template__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>