force-app/main/default/objects/Note_Template__mdt/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <label>Template Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>